feat: how to build a-files & add artifact iOS simulator